--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,225 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  font-size: 62.5%;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+.container {
+  max-width: calc(100% - 50px);
+  width: 1200px;
+  margin: 0 auto;
+}
+p {
+  font-size: 1.6rem;
+}
+h3 {
+  font-size: 4rem;
+}
+header {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 25px 0;
+}
+header nav {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+header nav a {
+  text-decoration: none;
+  color: #000080;
+  font-size: 1.8rem;
+  opacity: 0.6;
+}
+header nav a:hover {
+  opacity: 1;
+}
+.top-content {
+  width: 100%;
+  background: #C0C0C0;
+  line-height: 1.5;
+  padding: 5% 1%;
+}
+.top-content .my-img {
+  width: 50%;
+  height: auto;
+}
+.top-content h1 {
+  font-size: 6rem;
+}
+.top-content button {
+  border-radius: 20px;
+  background: black;
+  padding: 25px;
+  font-size: 2rem;
+  color: white;
+  margin-top: 15px;
+}
+.bottom-content {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5% 1%;
+}
+.bottom-content div {
+  padding: 2% 2% 2% 0;
+}
+.bottom-content .listen-up {
+  width: 47.5%;
+}
+.bottom-content .stuff-good-at {
+  width: 47.5%;
+}
+.bottom-content .stuff-good-at .stuff-list {
+  border: 1px solid gray;
+}
+.bottom-content .stuff-good-at .stuff-list li {
+  font-size: 1.6rem;
+  border-bottom: 1px solid gray;
+  padding: 3%;
+}
+.bottom-content .stuff-good-at .stuff-list li:last-child {
+  border: none;
+}
+.bottom-content h2 {
+  font-size: 3rem;
+}
+.bottom-content p {
+  padding: 2% 0;
+}
