--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,124 @@ table {
 }
 
 html, body {
-    height: 100%;
+		height: 100%;
+		font-size: 62.5%;
 }
 
+img {
+	width: 100%;
+	height: auto;
+}
+
+// Variables
+@link-color: #000080;
+@background-color: #C0C0C0;
+
+// Mixins
+.button-template() {
+	border-radius: 20px;
+	background: black;
+	padding: 25px;
+	font-size: 2rem;
+	color: white;
+}
+
+.container {
+	max-width: calc(100% - 50px);
+	width: 1200px;
+	margin: 0 auto;
+}
+
+p {
+	font-size: 1.6rem;
+}
+
+h3 {
+	font-size: 4rem;
+}
+
+header {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	padding: 25px 0;
+
+	nav {
+		width: 40%;
+		display: flex;
+		justify-content: space-between;
+
+		a {
+			text-decoration: none;
+			color: @link-color;
+			font-size: 1.8rem;
+			opacity: .6;
+
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+}
+
+.top-content {
+	width: 100%;
+	background: @background-color;
+	line-height: 1.5;
+	padding: 5% 1%;
+
+	.my-img {
+		width: 50%;
+		height: auto;
+	}
+
+	h1 {
+		font-size: 6rem;
+	}
+
+	button {
+		.button-template;
+		margin-top: 15px;
+	}
+}
+
+.bottom-content {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5% 1%;
+
+	div {
+		padding: 2% 2% 2% 0;
+	}
+
+	.listen-up {
+		width: 47.5%;
+	}
+
+	.stuff-good-at {
+		width: 47.5%;
+
+		.stuff-list {
+			border: 1px solid gray;
+
+			li {
+				font-size: 1.6rem;
+				border-bottom: 1px solid gray;
+				padding: 3%;
+			}
+
+			li:last-child {
+				border: none;
+			}
+		}
+	}
+
+	h2 {
+		font-size: 3rem;
+	}
+
+	p {
+		padding: 2% 0;
+	}
+}
