--- a/less/index.less
+++ b/less/index.less
@@ -86,6 +86,11 @@ img {
 	max-width: calc(100% - 50px);
 	width: 1200px;
 	margin: 0 auto;
+
+	@media(max-width: 500px) {
+		max-width: 500px;
+		width: 100%;
+	}
 }
 
 p {
@@ -112,9 +117,26 @@ header {
 			color: @link-color;
 			font-size: 1.8rem;
 			opacity: .6;
+			margin: 1%;
 
 			&:hover {
 				opacity: 1;
+			}
+		}
+	}
+
+	@media(max-width: 500px) {
+		justify-content: center;
+
+		nav {
+			width: 100%;
+			flex-direction: column;
+
+			a {
+				opacity: 1;
+				font-size: 2rem;
+				.button-template();
+				text-align: center;
 			}
 		}
 	}
@@ -126,7 +148,7 @@ header {
 	line-height: 1.5;
 	padding: 5% 1%;
 
-	.my-img {
+	img {
 		width: 50%;
 		height: auto;
 	}
@@ -138,6 +160,17 @@ header {
 	button {
 		.button-template;
 		margin-top: 15px;
+	}
+
+	@media(max-width: 500px) {
+		button {
+			width: 100%;
+		}
+
+		img {
+			width: 100%;
+			height: auto;
+		}
 	}
 
 }
@@ -217,6 +250,19 @@ header {
 	h2 {
 		font-size: 3rem;
 		width: 100%;
+	}
+
+	@media(max-width: 500px) {
+		flex-flow: column nowrap;
+
+		.listen-up, .stuff-good-at {
+			width: 100%;
+			height: auto;
+		}
+
+		.stuff-good-at, .work-history, .listen-up h2 {
+			text-align: center;
+		}
 	}
 }
 
